style.css
body {
  width: 960px;
  font-family: Arial, Helvetica, sans-serif;
  color: black;
}

header {
  height: 100px;
}

nav {
  width: 100%;
  background-color: #555;
  color: white;
}

nav img {
  display: inline-block;
  margin-left: 60px;
  margin-bottom: 10px;

}

nav ul {
  display: inline-block;
  margin-top: 0px;
  margin-bottom: 0px;
}

nav li {
  display: inline-block;
  line-height: 70px;
  vertical-align: bottom;
  padding: 15px 30px;
  color: #888;
  margin-bottom: 0px;
}

main > img {
  margin-bottom: 0px;
}

main ul {
  padding: 0px;
  margin-left: 0px;
  margin-right: 0px;
  font-size: 0;
}

main li {
  display: inline-block;
  margin-top: 30px;
  margin-bottom: 30px;
}

main li:last-child {
  margin-right: 0px;
  display: inline-block;
  margin-left: 30px;
}

main li:first-child {
  margin-left: 0px;
  margin-right: 30px;
}

section {
  display: inline-block;
}

section img {
  margin-right: 30px;
}

article {
  display: inline-block;
  width: 450px;
  float: right;
  margin: 0px;
  overflow: scroll;
  height: 400px;
}

h2 {
  margin-top: 0px;
}

button {
  width: 250px;
  height: 40px;
  border-radius: 15px;
  font-size: 1rem;
  background-color: #111;
  color: white;
}

button:hover {
  background-color: #888;
}

footer {
  width: 100%;
  height: 100px;
  background-color: #555;
  margin-top: 30px;
}

